# wgpu-mandelbrot

./: Cargo.toml  README.md  flake.nix
src/: buffer.rs  colour.rs  command_buffer.rs  command_encoder.rs  compute.rs  compute.wgsl  double_buffered.rs  lib.rs  main.rs  pixel.rs  screen.rs  shader.wgsl  typed_buffer.rs  var.rs
src/typed_buffer/: var.rs
