[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
env_logger = "0.9.1"
fnv = "1.0.7"
log = "0.4.17"
pollster = "0.2.5"
rayon = "1.5.3"
wgpu = "0.14.0"
winit = "0.27.4"
